name:                yuntan-gateway
version:             1.0.0.0
-- synopsis:
-- description:
homepage:            https://github.com/Lupino/yuntan-gateway#readme
license:             BSD3
license-file:        LICENSE
author:              Li Meng Jun
maintainer:          lmjubuntu@gmail.com
copyright:           MIT
category:            value
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Yuntan.Gateway
                     , Yuntan.Gateway.Utils
                     , Yuntan.Gateway.Types
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , time
                     , text
                     , scotty
                     , signature
                     , bytestring
                     , http-types
                     , aeson
                     , unix-time
                     , wai
                     , unordered-containers
                     , wreq
                     , http-client
                     , case-insensitive
                     , lens
                     , hslogger
                     , websockets
                     , stm
                     , cookie
  default-language:    Haskell2010

executable simple-gateway
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , yuntan-gateway
                     , scotty
                     , wai-cors
                     , optparse-applicative
                     , aeson
                     , yaml
                     , bytestring
                     , http-client
                     , data-default-class
                     , streaming-commons
                     , warp
                     , wreq
                     , lens
                     , network-uri
                     , wai-websockets
                     , websockets
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Lupino/yuntan-gateway
